KW45/Aufgabe3_2/terminal.txt
Windows PowerShell
Copyright (C) Microsoft Corporation. All rights reserved.

Install the latest PowerShell for new features and improvements! https://aka.ms/PSWindows

PS D:\python\KW45\Aufgabe3_2> python
Python 3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> exec(open("Aufgabe3_2.py").read())
>>> data_by_country['DNK]              
  File "<stdin>", line 1
    data_by_country['DNK]
                         ^
SyntaxError: EOL while scanning string literal
>>> data_by_country['DNK']
[7.58545446395874, 6.414242744445801, 7.576970100402832, 7.519242286682129, 7.5349998474121085, 7.970151424407959, 7.0428786277771, 7.411364078521728, 6.631211757659912, 8.304545402526855, 8.522272109985353, 7.370909214019775, 8.249696731567383, 8.649394035339355, 6.800000190734862, 7.598484992980957, 7.240757942199707, 7.740757942199707, 6.6387877464294425, 7.938939571380615, 8.284696578979492, 6.441818237304688, 6.845909118652344, 6.911818027496338, 7.953636169433594, 7.836817741394043, 7.182121276855469, 7.249242305755615, 6.6169700622558585, 8.260909080505371, 6.957575798034668, 8.091060638427733, 7.866212368011475, 8.895909309387207, 7.9621214866638175, 7.931060791015625, 7.907878875732423, 8.649242401123049, 8.097424507141112, 6.089090824127197, 6.306666374206543, 6.040454387664795, 8.48121166229248, 8.100909233093263, 8.49045467376709, 7.717576026916504, 7.4778785705566415, 8.524697303771973, 8.997121810913086, 8.110909461975098, 8.018484115600586, 7.203030586242676, 8.712424278259277, 7.322727203369141, 7.334848880767822, 6.676363468170166, 8.000151634216309, 7.34333324432373, 8.762424468994139, 7.644393920898437, 8.454999923706055, 6.998332977294923, 6.693788051605225, 7.497121334075928, 7.0121216773986825, 7.1915154457092285, 8.44151496887207, 7.9172730445861825, 7.368181705474853, 6.992726802825928, 8.168636322021483, 7.822878837585449, 8.17242431640625, 8.45106029510498, 8.914999961853027, 7.728030204772949, 7.870151519775391, 7.5403032302856445, 6.625302791595459, 7.294545650482178, 7.390151023864746, 8.048636436462402, 8.456818580627441, 7.917424201965332, 6.5077271461486825, 7.049696922302246, 6.555000305175781, 8.517726898193361, 9.290605545043944, 9.420454025268556, 8.225000381469728, 9.03636360168457, 7.6739397048950195, 8.612575531005861, 8.386667251586914, 6.800151824951173, 8.448332786560059, 8.107121467590332, 8.813333511352539, 9.02393913269043, 8.147424697875978, 9.15333366394043, 8.651363372802733, 8.692575454711914, 8.720605850219728, 9.403939247131348, 9.535303115844728, 9.475605964660645, 8.902424812316895, 7.052474021911621, 9.036978721618652, 8.385156631469728]
>>> output_by_country['CHK']
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
KeyError: 'CHK'
>>> output_by_country['CHN'] 
{'t_avg': 6, 't_max_time': 2007, 't_max': 7, 't_min_time': 1969, 't_min': 5}
>>> output_by_country['DNK']  
{'t_avg': 7, 't_max_time': 2007, 't_max': 9, 't_min_time': 1942, 't_min': 6}
>>> output_by_country['BRA'] 
{'t_avg': 24, 't_max_time': 2005, 't_max': 25, 't_min_time': 1917, 't_min': 24}
>>> output_by_country['PAK'] 
{'t_avg': 19, 't_max_time': 2009, 't_max': 20, 't_min_time': 1950, 't_min': 18}
>>> output_by_country['CAN'] 
{'t_avg': -7, 't_max_time': 2010, 't_max': -4, 't_min_time': 1972, 't_min': -9}
>>> output_by_country['CIV'] 
{'t_avg': 26, 't_max_time': 2010, 't_max': 27, 't_min_time': 1928, 't_min': 25}